@@ -12,7 +12,7 @@
     <includeDependencies package="." />
 
     <include package=".portlets" />
-    
+
     <permission
         id="collective.nitf.AddNewsArticle"
         title="collective.nitf: Add News Article"
@@ -44,20 +44,6 @@
             />
     </browser:menuItems>
 
-    <genericsetup:registerProfile
-        name="default"
-        title="collective.nitf"
-        description="A Dexterity-based content type inspired on the News Industry Text Format specification."
-        directory="profiles/default"
-        provides="Products.GenericSetup.interfaces.EXTENSION"
-        />
-
-    <genericsetup:registerProfile
-        name="uninstall"
-        title="collective.nitf uninstall"
-        directory="profiles/uninstall"
-        description="Uninstall profile for the collective.nitf package."
-        provides="Products.GenericSetup.interfaces.EXTENSION"
-        />
+    <include file="profiles.zcml" />
 
 </configure>
