@@ -1,0 +1,35 @@
+<configure
+    xmlns="http://namespaces.zope.org/zope"
+    xmlns:genericsetup="http://namespaces.zope.org/genericsetup"
+    xmlns:i18n="http://namespaces.zope.org/i18n"
+    i18n_domain="collective.nitf">
+
+  <genericsetup:registerProfile
+      name="default"
+      title="collective.nitf"
+      description="A Dexterity-based content type inspired on the News Industry Text Format specification."
+      directory="profiles/default"
+      provides="Products.GenericSetup.interfaces.EXTENSION" />
+
+  <genericsetup:registerProfile
+      name="uninstall"
+      title="collective.nitf uninstall"
+      directory="profiles/uninstall"
+      description="Uninstall profile for the collective.nitf package."
+      provides="Products.GenericSetup.interfaces.EXTENSION" />
+
+  <genericsetup:importStep
+      name="collective.nitf"
+      title="collective.nitf special import handlers"
+      description=""
+      handler="collective.nitf.setuphandlers.import_various" />
+
+  <genericsetup:upgradeStep
+      title="Add catalog indexes"
+      description=""
+      source="1000"
+      destination="1001"
+      handler="collective.nitf.setuphandlers.add_catalog_indexes"
+      profile="collective.nitf:default" />
+
+</configure>
