@@ -1,40 +1,11 @@
 <?xml version="1.0"?>
 <object name="portal_catalog">
-    <!-- TODO: http://maurits.vanrees.org/weblog/archive/2009/12/catalog -->
-    <index name="subtitle" meta_type="ZCTextIndex">
-        <indexed_attr value="subtitle"/>
-        <extra name="index_type" value="Okapi BM25 Rank"/>
-        <extra name="lexicon_id" value="plone_lexicon"/>
-    </index>
-    <index name="byline" meta_type="ZCTextIndex">
-        <indexed_attr value="byline"/>
-        <extra name="index_type" value="Okapi BM25 Rank"/>
-        <extra name="lexicon_id" value="plone_lexicon"/>
-    </index>
-    <index name="genre" meta_type="FieldIndex">
-        <indexed_attr value="genre"/>
-    </index>
-    <index name="section" meta_type="FieldIndex">
-        <indexed_attr value="section"/>
-    </index>
-    <index name="urgency" meta_type="FieldIndex">
-        <indexed_attr value="urgency"/>
-    </index>
-    <index name="location" meta_type="ZCTextIndex">
-        <indexed_attr value="location"/>
-        <extra name="index_type" value="Okapi BM25 Rank"/>
-        <extra name="lexicon_id" value="plone_lexicon"/>
-    </index>
-    <index name="SearchableText" meta_type="ZCTextIndex">
-        <indexed_attr value="SearchableText"/>
-        <extra name="index_type" value="Okapi BM25 Rank"/>
-        <extra name="lexicon_id" value="plone_lexicon"/>
-    </index>
-    <column value="subtitle"/>
-    <column value="byline"/>
-    <column value="genre"/>
-    <column value="section"/>
-    <column value="urgency"/>
-    <column value="location"/>
-    <column value="SearchableText"/>
+ <!-- Do not add indexes here; use add_catalog_indexes in setuphandlers.py -->
+ <column value="subtitle"/>
+ <column value="byline"/>
+ <column value="genre"/>
+ <column value="section"/>
+ <column value="urgency"/>
+ <column value="location"/>
+ <column value="SearchableText"/>
 </object>
