@@ -1,6 +1,6 @@
 <?xml version="1.0"?>
 <metadata>
- <version>1</version>
+ <version>1001</version>
  <dependencies>
   <dependency>profile-plone.app.dexterity:default</dependency>
   <dependency>profile-plone.app.registry:default</dependency>
